--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,20 +1,13 @@
-FROM ubuntu:16.04
+FROM ubuntu:xenial-20160809
 
 MAINTAINER Jeremiah H. Savage <jeremiahsavage@gmail.com>
 
 USER root
 
-ENV DEBIAN_FRONTEND=noninteractive
-
-RUN apt-get update \
-    && apt-get upgrade -y
-
 RUN apt-get update && apt-get install -y \
-    git \
-    python3-pip \
     python3-pandas \
-    python3-sqlalchemy \
-    sudo
+    python3-pip \
+    python3-sqlalchemy
 
 RUN apt-get clean \
     && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
@@ -22,15 +15,3 @@ RUN apt-get clean \
 ENV version 0.3
 
 RUN pip3 install samtools_metrics_sqlite
-
-WORKDIR /usr/local
-
-#RUN git clone https://github.com/jeremiahsavage/exome_intervals.git
-
-RUN adduser --disabled-password --gecos '' ubuntu && adduser ubuntu sudo && echo "ubuntu	ALL=(ALL)	NOPASSWD:ALL" >> /etc/sudoers.d/ubuntu
-
-USER ubuntu
-
-ENV HOME /home/ubuntu
-
-WORKDIR ${HOME}
