--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -4,14 +4,11 @@ MAINTAINER Jeremiah H. Savage <jeremiahsavage@gmail.com>
 
 USER root
 
-RUN apt-get update && apt-get install -y \
-    python3-pandas \
-    python3-pip \
-    python3-sqlalchemy
-
-RUN apt-get clean \
-    && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
-
-ENV version 0.3
-
-RUN pip3 install samtools_metrics_sqlite
+RUN apt-get update \
+    && apt-get install -y \
+       python3-pandas \
+       python3-pip \
+       python3-sqlalchemy \
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* \
+    &&  pip3 install samtools_metrics_sqlite
