--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,4 +1,4 @@
-FROM ubuntu:xenial-20160809
+FROM ubuntu:xenial-20161010
 
 MAINTAINER Jeremiah H. Savage <jeremiahsavage@gmail.com>
 
@@ -8,5 +8,5 @@ RUN apt-get update \
        python3-pip \
        python3-sqlalchemy \
     && apt-get clean \
+    && pip3 install samtools_metrics_sqlite \
     && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* \
-    &&  pip3 install samtools_metrics_sqlite
