--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,7 +2,9 @@ FROM ubuntu:xenial-20161010
 
 MAINTAINER Jeremiah H. Savage <jeremiahsavage@gmail.com>
 
-RUN apt-get update \
+RUN echo 'Acquire::http::Proxy "http://cloud-proxy:3128";' >> /etc/apt/apt.conf.d/01proxy \
+    && echo 'Acquire::https::Proxy "http://cloud-proxy:3128";' >> /etc/apt/apt.conf.d/01proxy \
+    && apt-get update \
     && apt-get install -y \
        python3-pandas \
        python3-pip \
@@ -10,3 +12,4 @@ RUN apt-get update \
     && apt-get clean \
     && pip3 install samtools_metrics_sqlite \
     && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* \
+    && rm -f /etc/apt/apt.conf.d/01proxy
