--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,16 +2,11 @@ FROM ubuntu:xenial-20161010
 
 MAINTAINER Jeremiah H. Savage <jeremiahsavage@gmail.com>
 
-RUN echo 'Acquire::http::Proxy "http://cloud-proxy:3128";' >> /etc/apt/apt.conf.d/01proxy \
-    && echo 'Acquire::https::Proxy "http://cloud-proxy:3128";' >> /etc/apt/apt.conf.d/01proxy \
-    && apt-get update \
+RUN apt-get update \
     && apt-get install -y \
        python3-pandas \
        python3-pip \
        python3-sqlalchemy \
     && apt-get clean \
-    && export http_proxy=http://cloud-proxy:3128 \
-    && export https_proxy=http://cloud-proxy:3128 \
     && pip3 install samtools_metrics_sqlite \
-    && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* \
-    && rm -f /etc/apt/apt.conf.d/01proxy
+    && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
